Fixing overflow scroll issue on home page fix-list modal

--- a/src/components/fix_list_add_item.module.scss
+++ b/src/components/fix_list_add_item.module.scss
@@ -13,6 +13,7 @@
     .new_fix_form {
         width: 85%;
         height: 90%;
+        overflow-y: scroll;
         margin: 20px auto;
         background-color: #e9e9e9;
         padding: 10px;
